<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"PCS Communicator "</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="calender">Kalendarz</string>
    <string name="day_schedule">Plan dnia</string>
    <string name="communicator">Komunikator</string>
    <string name="students_profile">Profil ucznia</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="title_calendar_detail">Pytania na wybrany dzień:</string>
    <string name="edit">Edytuj</string>
    <string name="tutor">Tutor</string>
    <string name="play">Graj</string>
    <string name="questions_manager">Manager pytań</string>    
    <string name="question_edition">Edycja pytania</string>    
    <string name="settings">Ustawienia</string>
    <string name="addNew">Dodaj nowe</string>
    <string name="yesString">Tak</string>
    <string name="noString">Nie</string>
    <string name="deleteConfirmation">Czy na pewno chcesz usunąć pytanie: </string>
    <string name="emptyQuestion">Wpisz treść pytania</string>
        
    <color name="lightGray">#B0B0B0</color>
    <color name="selected">#bfbdf1</color>
    <color name="testColorRed">#FF0000</color>
    <color name="testColorBlue">#0000FF</color>
    <string name="save">Zapisz</string>
    <string name="questions_answer_label">Odpowiedzi na pytania</string>
    <string name="begin">Rozpocznij</string>

</resources>