<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:weightSum="2"
    android:padding="0dp"
    tools:context=".MainActivity" >

    <TableRow android:layout_weight="1" >

        <Button
            android:id="@+id/button_calender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/calender" />

        <Button
            android:id="@+id/button_day_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/day_schedule" />
    </TableRow>

    <TableRow android:layout_weight="1" >

        <Button
            android:id="@+id/button_communicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/communicator" />

        <Button
            android:id="@+id/button_students_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/students_profile" />
    </TableRow>

</TableLayout>
